--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
 </head>
 
 <body>
-    <COMPLETAR>
-        <COMPLETAR>Mi Blog - Aplicando HTML Semántico</COMPLETAR>
-    </COMPLETAR>
+    <header>
+        <div>Mi Blog - Aplicando HTML Semántico</div>
+    </header>
     
-    <COMPLETAR>
-        <COMPLETAR>
-            <COMPLETAR><a href="#">Inicio</a></COMPLETAR>
-            <COMPLETAR><a href="#">Sobre mí</a></COMPLETAR>
-            <COMPLETAR><a href="#">Contacto</a></COMPLETAR>
-        </COMPLETAR>
-    </COMPLETAR>
+    <div>
+        <ol>
+            <li><a href="#">Inicio</a></div>
+            <li><a href="#">Sobre mí</a></div>
+            <li><a href="#">Contacto</a></div>
+            </ol>
+        </div>
     
     <COMPLETAR>
         <COMPLETAR>
